# ProtoToStruct

./: .gitignore  README.md
run/: run.sh
src/: CMakeLists.txt
src/main/: CMakeLists.txt  main.cpp
src/protocol/: CMakeLists.txt
src/protocol/proto/: CMakeLists.txt  comm_struct.proto  proto_to_struct.proto
src/protocol/proto_gen_cpp/: CMakeLists.txt  comm_struct.pb.cc  comm_struct.pb.h  proto_to_struct.pb.cc  proto_to_struct.pb.h
src/test/: CMakeLists.txt  comm_struct_struct.h  my_test.cpp
